--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -22,7 +22,7 @@ import Instagram from "../assets/instagram.svg";
       <Instagram class="inline" />
       <span class="underline">Instagram</span>
     </a>
-    <a href="mailto:beabaencantos@gmail.com" class="text-white">
+    <a href="mailto:contato@beabaencantos.com.br" class="text-white">
       <Email class="inline" />
       <span class="underline">Contato</span></a
     >
