make it responsive

--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -5,7 +5,9 @@ import Email from "../assets/email.svg";
 import Instagram from "../assets/instagram.svg";
 ---
 
-<div class="flex flex-col justify-center items-center h-screen gap-4">
+<div
+  class="flex flex-col justify-center items-center h-screen gap-4 text-center p-4"
+>
   <Image src={logo} alt="logo beabá encantos" class="w-48 h-auto mb-4 shadow" />
   <h1 class="text-2xl font-bold">Em breve nosso site será lançado</h1>
   <h2 class="text-lg uppercase">
