--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -13,7 +13,7 @@ import "../styles/global.css";
       href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap"
       rel="stylesheet"
     />
-    <title>Astro Basics</title>
+    <title>Beaba Encantos</title>
   </head>
   <body class="text-base font-regular bg-brand-500 text-brand-800">
     <slot />
